--- a/assets/css/interactive.css
+++ b/assets/css/interactive.css
@@ -4,12 +4,24 @@
 
 }
 
-
+body{
+	color:#00E6E6;
+	font-size: 20pt;
+	background-color:#FFF;
+	text-align: center;
+	font-family: "Lato";
+	margin: 0;
+    min-height: 1024px;
+    max-height: 1440px;
+    min-width:768px;
+    max-width: 900; 
+    margin:auto 0px;
+    margin-top: 150px;
+}
 
 #logo{
 	height:300px;
-	width:100px;
-	position:relative;
+	width:600px;
 }
 
 
@@ -64,7 +76,17 @@
 	
 }
 
-.suggestion{    
+.connect{
+	display:none;
+	text-align: center;
+	font-size: 15pt;
+
+}
+
+.suggestions{    
+  display: none;
+  text-align: center;
+  font-size: 15pt;
 }
 
 
