--- a/assets/css/singlish.css
+++ b/assets/css/singlish.css
@@ -11,6 +11,13 @@ body{
 	text-align: center;
 	font-family: "Lato";
 	margin: 0;
+    min-height: 1024px;
+    max-height: 1440px;
+    min-width:768px;
+    max-width: 900; 
+    margin:auto 0px;
+    margin-top: 150px;
+   
 }
 
 .h1{
@@ -22,7 +29,7 @@ body{
 #logo{
 	height:300px;
 	width:800px;
-}
+}}
 
 .container{
 	vertical-align: 
@@ -94,6 +101,14 @@ body{
 	font-size: 20pt;
 	color:gray;
 	display:none;
+}
+
+
+.links{
+	font-family: 'Lato';
+	font-size: 20pt;
+	color:gray;
+	display: none;
 }
 
 
