--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
 }
 
 
-
 body{
 	color:#00E6E6;
 	font-size: 150pt;
@@ -12,6 +11,15 @@ body{
 	text-align: center;
 	font-family: "Lato";
 	margin: 0;
+
+
+    min-height: 1024px;
+    max-height: 1440px;
+    min-width:768px;
+    max-width: 900;
+     
+    margin:auto 0px;
+    margin-top: 150px;
 }
 
 #logo{
