--- a/assets/css/singlish.css
+++ b/assets/css/singlish.css
@@ -111,26 +111,6 @@ body{
 	display: none;
 }
 
-
-.items{
-	font-style: italic;
-    color:gray;
-    font-family: sunnfont;
-    font-size:40pt;
-	src:url(../SUNN.oft);
-    padding:25px;
-display: none;
-
-}
-
-.expla{
-	color:gray;
-	font-family: 'Lato';
-	font-size: 20pt;
-	display: none;
-}
-
-
 .andthings{
     color:gray;
 	font-family: 'Lato';
@@ -168,8 +148,6 @@ display: none;
 	width:200pt;
 	border-width: 2pt;
 }
-
-
 #scroll-top{
 	font-family: sunnfont;
 	src:url(../SUNN.oft);
@@ -180,7 +158,39 @@ display: none;
 	color:orange;
 	
 }
+
 #scroll-top{
 	cursor: pointer;
 	text-decoration: underline;
 }
+
+
+.btn{
+
+  background: #ffffcc;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 15;
+  -moz-border-radius: 15;
+  border-radius: 10px;
+  font-family: sunnfont;
+	src:url(../SUNN.oft);
+  color: #ffffff;
+  font-size: 50px;
+  padding: 5px 10px 5px 10px;
+ margin-top:40px; 
+ height:50px;
+ width:400px;
+ 
+ }
+
+
+.btn:hover {
+background: #86b3d1;
+cursor: pointer;
+}
+}
+
